--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ input[type="text"] {
   text-align: center;
   cursor: text;
   transition: all 0.3s ease;
+  outline: none;
 }
 
 input[type="text"]:focus {
@@ -106,4 +107,21 @@ input[type="text"]:focus {
 
 input[type="text"]::placeholder {
   color: #808096;
+}
+
+/* Mobile input specific styles */
+#mobileNameInput {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  touch-action: manipulation;
+}
+
+/* Adjust input size on small screens */
+@media screen and (max-width: 768px) {
+  input[type="text"] {
+    font-size: 18px;
+    width: 80vw;
+    max-width: 300px;
+  }
 }
